<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/txtInput"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="10dp"
        android:background="#EFEDED"
        android:padding="10dp"
        android:textSize="48sp"
        android:gravity="bottom|end">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_7"
            android:textSize="20sp"
            android:onClick="onDigit"
            android:layout_margin="2dp"
            tools:ignore="NestedWeights">

        </Button>

        <Button
            android:id="@+id/btn8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_8"
            android:textSize="20sp"
            android:onClick="onDigit"
            android:layout_margin="2dp">
        </Button>

        <Button
            android:id="@+id/btn9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_9"
            android:textSize="20sp"
            android:onClick="onDigit"
            android:layout_margin="2dp">
        </Button>

        <Button
            android:id="@+id/btnDivine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_divine"
            android:textSize="20sp"
            android:onClick="onOperator"
            android:layout_margin="2dp">
        </Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_4"
            android:textSize="20sp"
            android:onClick="onDigit"
            android:layout_margin="2dp">
        </Button>

        <Button
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_5"
            android:textSize="20sp"
            android:onClick="onDigit"
            android:layout_margin="2dp">
        </Button>

        <Button
            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_6"
            android:textSize="20sp"
            android:onClick="onDigit"
            android:layout_margin="2dp">
        </Button>

        <Button
            android:id="@+id/btnMultiple"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_multiple"
            android:textSize="20sp"
            android:onClick="onOperator"
            android:layout_margin="2dp">
        </Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_1"
            android:textSize="20sp"
            android:onClick="onDigit"
            android:layout_margin="2dp"
            tools:ignore="NestedWeights">
        </Button>

        <Button
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_2"
            android:textSize="20sp"
            android:onClick="onDigit"
            android:layout_margin="2dp">
        </Button>

        <Button
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_3"
            android:textSize="20sp"
            android:onClick="onDigit"
            android:layout_margin="2dp">
        </Button>

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_minus"
            android:textSize="20sp"
            android:onClick="onOperator"
            android:layout_margin="2dp">
        </Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/_0"
            android:onClick="onDigit"
            android:layout_margin="2dp"
            tools:ignore="NestedWeights">
        </Button>
        <Button
            android:id="@+id/btnDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/_dot"
            android:onClick="onDecimalPoint"
            android:layout_margin="2dp"
            tools:ignore="NestedWeights">
        </Button>

        <Button
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/_clear"
            android:onClick="onClear"
            android:layout_margin="2dp">
        </Button>

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/_plus"
            android:onClick="onOperator"
            android:layout_margin="2dp">
        </Button>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_equal"
            android:textSize="20sp"
            android:onClick="onEqual"
            android:layout_margin="2dp"
            tools:ignore="NestedWeights">
        </Button>

    </LinearLayout>


</LinearLayout>